Updated Chapter 1 Notes

--- a/DLFP_Chapter1_Intro.ipynb
+++ b/DLFP_Chapter1_Intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpu47qLnf8lTZVflHzPST4",
+      "authorship_tag": "ABX9TyOGeZrIpmoly6rudjYzaiqC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,11 +56,107 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
+      ],
       "metadata": {
         "id": "m9QyOW2NDZsc"
       },
-      "execution_count": null,
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from __future__ import print_function\n",
+        "#Mean squared error, a common function for selecting model performance in deep learning\n",
+        "#Since you want to minimize the error\n",
+        "\n",
+        "def mean_squared_error (y_true, y_pred):\n",
+        "  squared_error = (y_true-y_pred)**2\n",
+        "  return np.mean(squared_error)\n",
+        "\n",
+        "#Example of usage:\n",
+        "\n",
+        "y_true = np.array([0.8, 1.5, -0.34, 1.91, 0.49])\n",
+        "y_pred = np.array([0.25, 1.2, -0.07, 1.32, 0.67])\n",
+        "\n",
+        "print('MSE:', mean_squared_error(y_true, y_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1oXcfsk-D3pD",
+        "outputId": "90c5a3f4-db21-4ccf-e138-ec9ea248e696"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MSE: 0.16917999999999997\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_squared_error(y_true, y_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J3MQ61TUEj9t",
+        "outputId": "24b1015c-d19b-474d-fc36-f47fa76620fc"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(0.16917999999999997)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Can also imporve the function by adding hints to specify that the inputs are np.ndarray objects and the return type is a float"
+      ],
+      "metadata": {
+        "id": "ExBV4tLZEl_Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mean_squared_error (y_true: np.ndarray, y_pred:np.ndarray) -> float:\n",
+        "  \"\"\"\n",
+        "  Calculate the Mean Squared Error (MSE) between two NumPy arrays.\n",
+        "\n",
+        "  Args:\n",
+        "    y_true (np.ndarray): The true target values.\n",
+        "    y_pred (np.ndarray): The predicted target values.\n",
+        "  \"\"\"\n",
+        "  squared_error = (y_true-y_pred)**2\n",
+        "  return np.mean(squared_error)"
+      ],
+      "metadata": {
+        "id": "RAulNRR3ElA8"
+      },
+      "execution_count": 6,
       "outputs": []
     }
   ]
