updated code chapter 1

--- a/DLFP_Chapter1_Intro.ipynb
+++ b/DLFP_Chapter1_Intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGeZrIpmoly6rudjYzaiqC",
+      "authorship_tag": "ABX9TyMr+vN6fxs+j09o4xGbiZT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,6 +158,148 @@
       },
       "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Decorators are functions that modify the behavior of other functions or mtehods; used to enchance performance, cache results, or log function behavior.\n",
+        "\n",
+        "One of the more common decorators in JAX (our HP numerical computing + ML platform) is jax.jit. It performs JIT complication to accelerate code execution."
+      ],
+      "metadata": {
+        "id": "1hUs_TWvGRpg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ex: a function that takes a JAX array, raises all values to the 10th power,\n",
+        "#and then sums them:\n",
+        "\n",
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "\n",
+        "def compute_ten_power_sum(arr: jax.Array) -> float:\n",
+        "  return jnp.sum(arr**10)\n",
+        "\n",
+        "arr = jnp.array([1, 2, 3, 4, 5])\n",
+        "compute_ten_power_sum(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FPFtqPEGGci1",
+        "outputId": "ac4b4800-fd5b-48ce-f930-aaa69157d060"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array(10874275, dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We can speed up this function in one of two ways:"
+      ],
+      "metadata": {
+        "id": "1foTTo1jHJYJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#First way to speed up JAX function:\n",
+        "\n",
+        "%%time\n",
+        "jitted_compute_ten_power_sum = jax.jit(compute_ten_power_sum)\n",
+        "jitted_compute_ten_power_sum(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rab09VBKHLsQ",
+        "outputId": "3aad879f-8638-4959-f63c-c906ad5f2ed2"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 1.62 ms, sys: 69 µs, total: 1.69 ms\n",
+            "Wall time: 2.44 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array(10874275, dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "@jax.jit\n",
+        "def compute_ten_power_sum(arr: jax.Array) -> float:\n",
+        "  return jnp.sum(arr**10)\n",
+        "\n",
+        "compute_ten_power_sum(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZvVP0oz2KxKJ",
+        "outputId": "4790286f-f03f-4da9-e58f-ca12e4daa1ee"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 46.8 ms, sys: 593 µs, total: 47.3 ms\n",
+            "Wall time: 46.4 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array(10874275, dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "@jax.jit applies --> then JAX first traces the function (runs through it once with a special tracer object to build a computational graph, which is the static representation of all numerical operations performed) --> JAX compiles the graph using XLA (Accelerated Linear Algebra), this is a backend that generates highly optimized ML code --> compiled version is chached and reused whenever the function is called again with the same input shapes and types --> SPEEDUPS"
+      ],
+      "metadata": {
+        "id": "yQlWHQJLK9Vd"
+      }
     }
   ]
 }
