--- a/DLFP_Chapter1_Intro.ipynb
+++ b/DLFP_Chapter1_Intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr+vN6fxs+j09o4xGbiZT4",
+      "authorship_tag": "ABX9TyNi1kTe0wcZayXN3c6YBG08",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -300,6 +300,85 @@
       "metadata": {
         "id": "yQlWHQJLK9Vd"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Preconfiguring JAX jit with partial: functools.partial is used to prefill some arguments of a function, returning an updated version of the original function but with fixed values"
+      ],
+      "metadata": {
+        "id": "jvG6RXSgN2pI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from functools import partial\n",
+        "\n",
+        "def scale(x, scaling_factor):\n",
+        "  return x * scaling_factor\n",
+        "\n",
+        "#Creating a new function, scale_by_10, where scaling_factor is fixed to 10:\n",
+        "\n",
+        "scale_by_10 = partial(scale, scaling_factor=10)\n",
+        "\n",
+        "scale_by_10(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QG6t4K1ZOBcS",
+        "outputId": "1833dcf2-fe69-485e-a04d-368d2dbcb886"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "30"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In JAX, partial is used to customize a decorator before applying it\n",
+        "\n",
+        "Ex: @partial(jax.jit, static_argnums=...)\n",
+        "\n",
+        "This is how we configure a jax.jit decorator (remember that jax.jit compiled pYthon function for speed) and sometimes there may be static arguments (usually non-JAX array types like integers, strings, or booleans). If a static arg changes, JAX may need to recompile the function"
+      ],
+      "metadata": {
+        "id": "cc7A86c3Od88"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ex: compute a summary statistic over an array, choosing either the mean or med.\n",
+        "#This choice changes the control flow, so JAX needs to knwo the value of\n",
+        "#Average_method at compile time:\n",
+        "\n",
+        "from functools import partial\n",
+        "\n",
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "\n",
+        "@partial(jax.jit, static_argnums=(0,1))\n",
+        "def summarize(average_method: str, x: jax.Array) -> float:\n",
+        "  return average_method(x)"
+      ],
+      "metadata": {
+        "id": "Evn-2PEeOVP9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
