--- a/DLFP_Chapter1_Intro.ipynb
+++ b/DLFP_Chapter1_Intro.ipynb
@@ -1,5 +1,4 @@
 {
-<<<<<<< Updated upstream
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
@@ -16,14 +15,12 @@
       "name": "python"
     }
   },
-=======
->>>>>>> Stashed changes
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/dhassan24/DeepLearning_For_Biology/blob/main/DLFP_Chapter1_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -41,8 +38,8 @@
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Cloning into 'DeepLearning_For_Biology'...\n",
             "remote: Enumerating objects: 4, done.\u001b[K\n",
@@ -59,46 +56,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "id": "m9QyOW2NDZsc"
-      },
-      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
-<<<<<<< Updated upstream
       ],
       "metadata": {
         "id": "m9QyOW2NDZsc"
       },
       "execution_count": null,
       "outputs": []
-=======
-      ]
->>>>>>> Stashed changes
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1oXcfsk-D3pD",
-        "outputId": "90c5a3f4-db21-4ccf-e138-ec9ea248e696"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "MSE: 0.16917999999999997\n"
-          ]
-        }
-      ],
       "source": [
         "from __future__ import print_function\n",
         "#Mean squared error, a common function for selecting model performance in deep learning\n",
@@ -114,7 +85,6 @@
         "y_pred = np.array([0.25, 1.2, -0.07, 1.32, 0.67])\n",
         "\n",
         "print('MSE:', mean_squared_error(y_true, y_pred))"
-<<<<<<< Updated upstream
       ],
       "metadata": {
         "colab": {
@@ -132,13 +102,13 @@
             "MSE: 0.16917999999999997\n"
           ]
         }
-=======
->>>>>>> Stashed changes
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "mean_squared_error(y_true, y_pred)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -146,42 +116,31 @@
         "id": "J3MQ61TUEj9t",
         "outputId": "24b1015c-d19b-474d-fc36-f47fa76620fc"
       },
-<<<<<<< Updated upstream
       "execution_count": null,
-=======
->>>>>>> Stashed changes
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "np.float64(0.16917999999999997)"
             ]
           },
-          "execution_count": 5,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
-      ],
-      "source": [
-        "mean_squared_error(y_true, y_pred)"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "ExBV4tLZEl_Q"
-      },
       "source": [
         "Can also imporve the function by adding hints to specify that the inputs are np.ndarray objects and the return type is a float"
-      ]
+      ],
+      "metadata": {
+        "id": "ExBV4tLZEl_Q"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "RAulNRR3ElA8"
-      },
-      "outputs": [],
       "source": [
         "def mean_squared_error (y_true: np.ndarray, y_pred:np.ndarray) -> float:\n",
         "  \"\"\"\n",
@@ -193,50 +152,26 @@
         "  \"\"\"\n",
         "  squared_error = (y_true-y_pred)**2\n",
         "  return np.mean(squared_error)"
-<<<<<<< Updated upstream
       ],
       "metadata": {
         "id": "RAulNRR3ElA8"
       },
       "execution_count": null,
       "outputs": []
-=======
-      ]
->>>>>>> Stashed changes
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "1hUs_TWvGRpg"
-      },
       "source": [
         "Decorators are functions that modify the behavior of other functions or mtehods; used to enchance performance, cache results, or log function behavior.\n",
         "\n",
         "One of the more common decorators in JAX (our HP numerical computing + ML platform) is jax.jit. It performs JIT complication to accelerate code execution."
-      ]
+      ],
+      "metadata": {
+        "id": "1hUs_TWvGRpg"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FPFtqPEGGci1",
-        "outputId": "ac4b4800-fd5b-48ce-f930-aaa69157d060"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "Array(10874275, dtype=int32)"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
         "#Ex: a function that takes a JAX array, raises all values to the 10th power,\n",
         "#and then sums them:\n",
@@ -249,7 +184,6 @@
         "\n",
         "arr = jnp.array([1, 2, 3, 4, 5])\n",
         "compute_ten_power_sum(arr)"
-<<<<<<< Updated upstream
       ],
       "metadata": {
         "colab": {
@@ -270,22 +204,26 @@
           "metadata": {},
           "execution_count": 7
         }
-=======
->>>>>>> Stashed changes
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "1foTTo1jHJYJ"
-      },
       "source": [
         "We can speed up this function in one of two ways:"
-      ]
+      ],
+      "metadata": {
+        "id": "1foTTo1jHJYJ"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "source": [
+        "#First way to speed up JAX function:\n",
+        "\n",
+        "%%time\n",
+        "jitted_compute_ten_power_sum = jax.jit(compute_ten_power_sum)\n",
+        "jitted_compute_ten_power_sum(arr)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -293,72 +231,30 @@
         "id": "Rab09VBKHLsQ",
         "outputId": "3aad879f-8638-4959-f63c-c906ad5f2ed2"
       },
-<<<<<<< Updated upstream
       "execution_count": null,
-=======
->>>>>>> Stashed changes
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "CPU times: user 1.62 ms, sys: 69 µs, total: 1.69 ms\n",
             "Wall time: 2.44 ms\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Array(10874275, dtype=int32)"
             ]
           },
-          "execution_count": 9,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 9
         }
-      ],
-      "source": [
-        "#First way to speed up JAX function:\n",
-        "\n",
-        "%%time\n",
-        "jitted_compute_ten_power_sum = jax.jit(compute_ten_power_sum)\n",
-        "jitted_compute_ten_power_sum(arr)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZvVP0oz2KxKJ",
-        "outputId": "4790286f-f03f-4da9-e58f-ca12e4daa1ee"
-      },
-<<<<<<< Updated upstream
-      "execution_count": null,
-=======
->>>>>>> Stashed changes
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "CPU times: user 46.8 ms, sys: 593 µs, total: 47.3 ms\n",
-            "Wall time: 46.4 ms\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "Array(10874275, dtype=int32)"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
         "%%time\n",
         "@jax.jit\n",
@@ -366,13 +262,43 @@
         "  return jnp.sum(arr**10)\n",
         "\n",
         "compute_ten_power_sum(arr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZvVP0oz2KxKJ",
+        "outputId": "4790286f-f03f-4da9-e58f-ca12e4daa1ee"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 46.8 ms, sys: 593 µs, total: 47.3 ms\n",
+            "Wall time: 46.4 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Array(10874275, dtype=int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
       ]
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "@jax.jit applies --> then JAX first traces the function (runs through it once with a special tracer object to build a computational graph, which is the static representation of all numerical operations performed) --> JAX compiles the graph using XLA (Accelerated Linear Algebra), this is a backend that generates highly optimized ML code --> compiled version is chached and reused whenever the function is called again with the same input shapes and types --> SPEEDUPS"
+      ],
       "metadata": {
         "id": "yQlWHQJLK9Vd"
-<<<<<<< Updated upstream
       }
     },
     {
@@ -470,7 +396,7 @@
         },
         "outputId": "683d8528-cffd-4dfd-9d79-88fce5f54bc3"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -513,7 +439,7 @@
         "id": "0qKTFkxs7oKP",
         "outputId": "8d43cfe9-91c1-41a6-ae2b-7255674facff"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -556,7 +482,7 @@
         "id": "pDS5U_D684pA",
         "outputId": "05633029-4c08-4040-bd9a-63c9e9c64eea"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +531,7 @@
         "id": "p1f1w9BvKT5R",
         "outputId": "0759c413-08b0-4597-f01f-db8fa81849a1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +575,7 @@
       "metadata": {
         "id": "A7v8_VN5PhGZ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -692,7 +618,7 @@
         "id": "yFRmQm3MPmpj",
         "outputId": "27f9f886-9b42-423a-f859-b62a44ad49b4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -730,7 +656,7 @@
       "metadata": {
         "id": "HgLVawwtQ1gY"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -743,7 +669,7 @@
       "metadata": {
         "id": "KjXEk-kUR9EF"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +684,7 @@
         "id": "bmzSQP4bSA1Z",
         "outputId": "37fa1586-82e8-42d6-d755-c1e428b07514"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -791,7 +717,7 @@
         "id": "iiJWkefgSBkU",
         "outputId": "4e67f058-cb1c-4a3a-b154-f7ae6c2334aa"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -812,28 +738,6 @@
       "metadata": {
         "id": "t-UsdwvOSpYP"
       }
-=======
-      },
-      "source": [
-        "@jax.jit applies --> then JAX first traces the function (runs through it once with a special tracer object to build a computational graph, which is the static representation of all numerical operations performed) --> JAX compiles the graph using XLA (Accelerated Linear Algebra), this is a backend that generates highly optimized ML code --> compiled version is chached and reused whenever the function is called again with the same input shapes and types --> SPEEDUPS"
-      ]
->>>>>>> Stashed changes
     }
-  ],
-  "metadata": {
-    "colab": {
-      "authorship_tag": "ABX9TyMr+vN6fxs+j09o4xGbiZT4",
-      "include_colab_link": true,
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
